css/edit.css
body {
    background-color: black;
    width: 100dvw;
    height: 100dvh;
}

main {
    width: 100%;
    height: 90%;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 3rem;
    margin-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

header .left {
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
}

header .right {
    display: flex;
    flex-direction: row-reverse;
    gap: 0.5rem;
}

input[type="text"], input[type="password"] {
    padding: 12px 20px;
    display: inline-block;
    border: 1px solid #2c3e50;
    border-radius: 8px;
    box-sizing: border-box;
    background-color: #1F2D3B;
    color: #bdc3c7;
}

b {
    font-weight: bold;
}

button {
    padding: 0.75rem;
    border-radius: .4rem;
    background-color: #34495e;
    cursor: pointer;
    transition: background-color 0.5s ease;
    text-align: center;
    user-select: none;
    color: white;
}

@media (hover: hover) and (pointer: fine) {
    button:hover {
        background-color: #273747;
    }
}

button:active {
    background-color: #1C2835;
}

button.save_btn {
    background-color: #218c74;
}

button.save_btn.saved {
    background-color: #27ae60;
}

button.save_btn.error {
    background-color: #c0392b;
}

@media (hover: hover) and (pointer: fine) {
    button.save_btn:hover {
        background-color: #185B4C;
    }
}

button.delete_btn {
    background-color: #c0392b;
}

@media (hover: hover) and (pointer: fine) {
    button.delete_btn:hover {
        background-color: #a02e22;
    }
}

button.delete_btn:active {
    background-color: #752118;
}

